# modemmanager-qt

./: CMakeLists.txt
src/: CMakeLists.txt  modemdevice.cpp
